--- a/TableroMensajes/mensajes/templates/mensajes/base.html
+++ b/TableroMensajes/mensajes/templates/mensajes/base.html
@@ -13,6 +13,7 @@
                 <li><a href="{% url 'crear_mensaje' %}">Crear Mensaje</a></li>
                 <li><a href="{% url 'ver_mensajes_recibidos' %}">Mensajes Recibidos</a></li>
                 <li><a href="{% url 'ver_mensajes_enviados' %}">Mensajes Enviados</a></li>
+                <li><a href="{% url 'eliminar_mensajes' %}">Eliminar Mensajes</a></li>
             </ul>
         </nav>
     </header>
@@ -22,7 +23,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Tablero de Mensajes</p>
+        <p>&copy; 2024 - Programacion Web II</p>
     </footer>
 </body>
 </html>
