--- a/TableroMensajes/mensajes/templates/mensajes/crear_mensaje.html
+++ b/TableroMensajes/mensajes/templates/mensajes/crear_mensaje.html
@@ -1,12 +1,10 @@
-{% extends 'mensajes/base.html' %}
-
-{% block title %}Crear Mensaje{% endblock %}
+{% extends "mensajes/base.html" %}
 
 {% block content %}
-<h2>Enviar Mensaje</h2>
-<form method="post">
+  <h2>Crear Mensaje</h2>
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Enviar</button>
-</form>
+  </form>
 {% endblock %}
